First Content added

--- a/experience.html
+++ b/experience.html
@@ -91,12 +91,9 @@
 
         <div class="exp-heading">
             <div class="cover-name-exp ">
-                <div class="exp">
-
-                    <center>
-                        <div clas="exp-title-cover">
-                            <div class="exp-title cover"> Experience </div> </div>
-                    </center>
+               
+                    <div class="exp-title cover"> Experience </div>
+                  
 
                 </div>
             </div>
@@ -139,9 +136,9 @@
 
 
             <div class="experi" id="fusemachineai">
-                <div class="exp-left">
+                <div class="exp-left hiddenleft">
                     <div class="exp-img">
-                        <img src="" alt="Image Description">
+                        <img src="allgraphics/announcement - ai-fellow-scholar-badge_2023.jpg" alt="Image Description">
                     </div>
                     <div class="exp-site"><button>Website</button></div>
                     <div class="exp-icon">
@@ -172,9 +169,9 @@
 
 
             <div class="experi" id="incubate">
-                <div class="exp-left">
+                <div class="exp-left hiddenleft">
                     <div class="exp-img">
-                        <img src="" alt="Image Description">
+                        <img src="allgraphics/incu.png" alt="Image Description">
                     </div>
                     <div class="exp-site"><button>Website</button></div>
                     <div class="exp-icon">
@@ -186,7 +183,7 @@
                 <div class="exp-right hiddenright">
                     <div class="exp-name" style="background-color: #B20030;">
                         <div class="main">Incubate Nepal</div>
-                        <div class="sub"> Research Scholar </div>
+                        <div class="sub">Student Researcher</div>
                     </div>
                     <div class="exp-description">
                         <div class="descrip-head"> About
@@ -209,7 +206,7 @@
             </div>
 
             <div class="experi">
-                <div class="exp-left">
+                <div class="exp-left hiddenleft">
                     <div class="exp-img">
                         <img src="allgraphics/srcn.jfif" alt="Image Description">
                     </div>
@@ -223,7 +220,7 @@
                 <div class="exp-right hiddenright">
                     <div class="exp-name" style="background-color: #186f53;">
                         <div class="main">Student Research Council Nepal</div>
-                        <div class="sub"> Research Scholar </div>
+                        <div class="sub">Mentor</div>
                     </div>
                     <div class="exp-description">
                         <div class="descrip-head"> About
@@ -241,9 +238,9 @@
 
 
             <div class="experi">
-                <div class="exp-left">
+                <div class="exp-left hiddenleft">
                     <div class="exp-img">
-                        <img src="allgraphics/ma" alt="Image Description">
+                        <img src="allgraphics/mattrab.png" alt="Image Description">
                     </div>
                     <div class="exp-site"><button>Website</button></div>
                     <div class="exp-icon">
@@ -256,7 +253,7 @@
                     <div class="exp-name" style="background-color: #27d659;">
                         <div class="main">Mattrab Community
                         </div>
-                        <div class="sub"> Content Creator</div>
+                        <div class="sub"> Creator</div>
                     </div>
                     <div class="exp-description">
                         <div class="descrip-head"> About
@@ -276,7 +273,7 @@
 
 
                 <div class="experi">
-                    <div class="exp-left">
+                    <div class="exp-left hiddenleft">
                         <div class="exp-img">
                             <img src="allgraphics/physicsclub.png" alt="Image Description">
                         </div>
