--- a/index.html
+++ b/index.html
@@ -126,9 +126,9 @@
                     </div>
                 </div>
                 <div class="lower-div">  
-                    <button class="profile-btn btn"><a href="https://www.youtube.com/watch?v=T33NN_pPeNI&t=11s">View
+                    <button class="profile-btn btn"><a href="https://drive.google.com/file/d/13a8yJfwsgoLo6g7c06i0RPlsLGNAhsgr/view?usp=drive_link">View
                             CV</a> </button>
-                    <button class="profile-btn btn"><a href="cv"> View Resume</a></button>
+                    <button class="profile-btn btn"><a href="https://drive.google.com/file/d/1i3s09gPAb95PhAUPcQSz6K1MzGJ6kf4c/view?usp=drive_link"> View Resume</a></button>
                 </div>
 
                 <div class="profile-icons">
@@ -272,19 +272,20 @@
         </div>
         <div id="research-right">
             <div class="research-right-item hiddenleft">
-                <div class="research-title">Title 1</div>
-                <div class="research-description">Description 1</div>
-                <button class="readmore">Read More</button>
+                <div class="research-title">Solve Kathmandu Hopspital’s Scheduling Problem using Grovers algorithm</div>
+                <div class="research-description">In this paper, we aimed to address the Hospital Scheduling problem in Kathmandu by framing it as a graph coloring problem. We utilized Grover's algorithm on an IBM quantum computer simulator to explore potential solutions.</div>
+                <button class="readmore"><a href="" style="color: #FFDE59;">  - Read More </a></button>
             </div>
             <div class="research-right-item hiddenleft">
-                <div class="research-title">Title 2</div>
-                <div class="research-description">Description 2</div>
-                <button class="readmore">Read More</button>
+                <div class="research-title">TBekenstein-Hawking Entropy: parameters the entropy of black hole depends on </div>
+                <div class="research-description">
+                    This paper explores how black holes challenge quantum mechanics and thermodynamics, emphasizing the need for a theory to explain black hole entropy. We delve into the factors influencing black hole entropy and derive the corresponding equation.</div>
+                    <button class="readmore"><a href="" style="color: #FFDE59;">  - Read More </a></button>
             </div>
             <div class="research-right-item hiddenleft">
                 <div class="research-title">Title 3</div>
                 <div class="research-description">Description 3</div>
-                <button class="readmore">Read More</button>
+                <button class="readmore"><a href="" style="color: #FFDE59;">  - Read More </a></button>
             </div>
         </div>
     </div>
