--- a/aboutme.html
+++ b/aboutme.html
@@ -53,7 +53,7 @@
             <div class="left-content">
                 <div class="menu-content">
                     <ul class="vertical-list">
-                        <li><a href="myweb.html">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a onclick="closeOverlay()" style="color: red;">About Me</a></li>
                         <li><a href="projects.html">Research and Projects</a></li>
                        
@@ -67,7 +67,7 @@
                 <div>
                     <ul class="vertical-list">
                         <li><a href="experience.html">Experience</a></li>
-                        <li><a href="index.html">My Blog</a></li>
+                        <li><a href="https://lenishpandey.blogspot.com/">My Blog</a></li>
                         <li><a href="projects.html">Resources</a></li>
                     </ul>
                 </div>
@@ -87,14 +87,14 @@
     <div class="aboutme">
         <div class="fullscreen-div">
 
-            <div class="about-heading"> About Me </div>
+            <div class="about-heading-cover">  <div class="about-heading cover">  About Me </div></div>
 
             <div class="about-content">
                 <div class="myquote">
                     <p>Quantum Computer might not reach its prime during my life time, but it is certainly not going to
                         stop me from working on it</p>
                 </div>
-                <div class="myimg">
+                <div class="myimg">  
                     <img src="allgraphics/my-photo2.jpg" alt="Image" />
                 </div>
             </div>
@@ -151,10 +151,15 @@
                 <div class="sxc-body">
                     <div class="sxc-img hiddenleft">
                         <div class="slider">
-                            <img src="allgraphics/incu.png" alt="Image 1">
-                            <img src="allgraphics/qnepal.png" alt="Image 2">
-                            <img src="allgraphics/fuse.png" alt="Image 3">
-                            <img src="allgraphics/incu.png" alt="Image 4">
+                            <img src="allgraphics/Highschool Activity/Physics Club Human Resource Manager (1)_page-0001.jpg" alt="Image 1">
+                            <img src="allgraphics/Highschool Activity/Mattrab Community Creator_page-0001.jpg" alt="Image 2">
+                            <img src="allgraphics/Highschool Activity/7th Sxc cycle Rally-2020, Ride Against Cancer fundraiser_page-0001.jpg" alt="Image 3">
+                            <img src="allgraphics/Highschool Activity/Math Mela 2019_page-0001.jpg" alt="Image 4">
+                            <img src="allgraphics/Highschool Activity/Math Mela 2021_page-0001.jpg" alt="Image 5">
+                            <img src="allgraphics/Highschool Activity/SXC Mini Marathon 2019_page-0001.jpg" alt="Image 6">
+                            <img src="allgraphics/Highschool Activity/Chemistry Olympiad 2020_page-0001.jpg" alt="Image 7">
+                            <img src="allgraphics/Highschool Activity/Physics Olympiad 2019_page-0001.jpg" alt="Image 8">
+                            <img src="allgraphics/Highschool Activity/Intra College Quiz Competition 2021_page-0001.jpg" alt="Image 9">
                         </div>
                     </div>
                     <div class="sxc-text cover">
@@ -163,12 +168,14 @@
                         </div>
                         <div class="text-line2">◽ Fundraiser for Breast Cancer, SXC Cycle Rallay, 2020</div>
                         <div class="text-line2">◽ Hunting Riches X: 01 , SXC  Physics Club 2019</div>
-                        <div class="text-line2">◽ Maths Mela, Sodalitus De’ Mathematica 2019
+                        <div class="text-line2">◽ Maths Mela, Sodalitus De’ Mathematica 2010
                         </div>
-                        <div class="text-line2">◽ Maths Mela, Sodalitus De’ Mathematica 2019
+                        <div class="text-line2">◽ Maths Mela, Sodalitus De’ Mathematica 2021
                         </div>
                         <div class="text-line2">◽ Mini Marathon, SXC sports Club, 2019</div>
+
                         <div class="text-line2">◽ Chemistry Olympiad, SXC Chemistry Club, 2019</div>
+                        <div class="text-line2">◽ Physics Olympiad, SXC Chemistry Club, 2019</div>
                         <div class="text-line2">◽ Intra-colllege Quiz Competition, Universal Solidarity Movement, 2021</div>
                     </div>
                 </div>
