Expereince Desgin, Flashcard desgin , Highschool Activity

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         <li><a onclick="closeOverlay()">Home</a></li>
                         <li><a href="aboutme.html">About Me</a></li>
                         <li><a href="projects.html">Research and Projects</a></li>
-                        
+                        <li><a href="Awards.html">Awards and Honors</a></li>
 
                     </ul> 
                 </div>
@@ -126,9 +126,9 @@
                     </div>
                 </div>
                 <div class="lower-div">  
-                    <button class="profile-btn btn"><a href="https://drive.google.com/file/d/13a8yJfwsgoLo6g7c06i0RPlsLGNAhsgr/view?usp=drive_link">View
+                    <button class="profile-btn btn"><a href="https://drive.google.com/file/d/13a8yJfwsgoLo6g7c06i0RPlsLGNAhsgr/view?usp=drive_link">
                             CV</a> </button>
-                    <button class="profile-btn btn"><a href="https://drive.google.com/file/d/1i3s09gPAb95PhAUPcQSz6K1MzGJ6kf4c/view?usp=drive_link"> View Resume</a></button>
+                    <button class="profile-btn btn"><a href="https://drive.google.com/file/d/1i3s09gPAb95PhAUPcQSz6K1MzGJ6kf4c/view?usp=drive_link">Resume</a></button>
                 </div>
 
                 <div class="profile-icons">
@@ -307,15 +307,13 @@
                 <div class="review-box hiddenleft">
                     <img src="allgraphics/mukeshdai.jfif" alt="User 1">
                     <h1>Mukesh Ghimire<br>
-                        <h3>Nuclear Physicist</h3>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos voluptates mollitia itaque
-                        totam obcaecati facere hic aut, et nam incidunt minima magnam dolorum magni aspernatur, modi
-                        nostrum dolore blanditiis eum?.</p>
+                        <h3 style="color: grey;">Nuclear Physicist</h3>
+                    <p>"Lenish is a standout in our research team, bringing unparalleled enthusiasm and clarity to Quantum computing. Their dedication is palpable, making them an indispensable and valued member."</p>
                 </div>
                 <div class="review-box hiddenleft">
                     <img src="allgraphics/sabindai.jfif" alt="User 2">
                     <h1>Sabin Thapa<br>
-                        <h3>QNepal, President-Founder</h3>
+                        <h3 style="color: grey;">President-Founder , QNepal</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit asperiores, magni, ipsum
                         reiciendis autem aut nihil alias quos cupiditate blanditiis deleniti dolorem aliquam magnam quia
                         deserunt amet dicta officiis nulla!</p>
@@ -323,7 +321,7 @@
                 <div class="review-box hiddenleft">
                     <img src="allgraphics/gauravdai.jfif">
                     <h1>Gaurav Pandya<br>
-                        <h3>ML Engineer, FuseMachineAI</h3>
+                        <h3 style="color: grey;">ML Engineer, FuseMachineAI</h3>
                     </h1>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit neque molestiae tenetur quo dicta
                         dolorum expedita praesentium accusamus? Odio natus sunt blanditiis molestias dolorem. Temporibus
