--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lenish Webpage</title>
+    <title>Lenish Pandey</title>
     <link rel="stylesheet" href="myweb.css">
    
 </head>
@@ -168,20 +168,20 @@
                 <div class="image hiddenleft"><a href="experience.html#qnepal" style="text-decoration: none; color: white;">
                      <img src="allgraphics/qnepal.png" alt="Image 1">
                     <h3>QNepal</h3>
-                    <p>Organizer and Mentor</p>
+                    <p>General Manager</p>
                 </a>
                 </div>
                 <div class="image hiddenleft"><a href="experience.html#fusemachineai" style="text-decoration: none; color: white;">
                     <img src="allgraphics/fuse.png" alt="Image 2">
                     <h3>Fuse Machine</h3>
-                    <p>Internship</p>
+                    <p>ML Engineer Intern</p>
                 </a>
                 </div>
 
                 <div class="image hiddenleft"><a href="experience.html#fusemachineai" style="text-decoration: none; color: white;">
                     <img src="allgraphics/incu.png" alt="Image 3">
                     <h3>Incubate Nepal</h3>
-                    <p>Researcher</p>
+                    <p>Researcher Scholar</p>
                 </a>
                 </div>
             </div>
@@ -277,7 +277,7 @@
                 <button class="readmore"><a href="" style="color: #FFDE59;">  - Read More </a></button>
             </div>
             <div class="research-right-item hiddenleft">
-                <div class="research-title">TBekenstein-Hawking Entropy: parameters the entropy of black hole depends on </div>
+                <div class="research-title">Bekenstein-Hawking Entropy: parameters the entropy of black hole depends on </div>
                 <div class="research-description">
                     This paper explores how black holes challenge quantum mechanics and thermodynamics, emphasizing the need for a theory to explain black hole entropy. We delve into the factors influencing black hole entropy and derive the corresponding equation.</div>
                     <button class="readmore"><a href="" style="color: #FFDE59;">  - Read More </a></button>
