Favicon and Image slider edits

--- a/aboutme.html
+++ b/aboutme.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me</title>
+    <link rel="icon" href="allgraphics/Lenish_Favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="allgraphics/Lenish_Favicon.ico" type="image/x-icon">
+    <title>More About Me</title>
     <link rel="stylesheet" href="aboutme.css">
     <link rel="stylesheet" href="myweb.css">
     <link rel="stylesheet" href="research.css">
@@ -151,6 +153,7 @@
                 <div class="sxc-body">
                     <div class="sxc-img hiddenleft">
                         <div class="slider">
+                            <marquee style = "scrollamount: 400"> 
                             <img src="allgraphics/Highschool Activity/Physics Club Human Resource Manager (1)_page-0001.jpg" alt="Image 1">
                             <img src="allgraphics/Highschool Activity/Mattrab Community Creator_page-0001.jpg" alt="Image 2">
                             <img src="allgraphics/Highschool Activity/7th Sxc cycle Rally-2020, Ride Against Cancer fundraiser_page-0001.jpg" alt="Image 3">
@@ -160,6 +163,7 @@
                             <img src="allgraphics/Highschool Activity/Chemistry Olympiad 2020_page-0001.jpg" alt="Image 7">
                             <img src="allgraphics/Highschool Activity/Physics Olympiad 2019_page-0001.jpg" alt="Image 8">
                             <img src="allgraphics/Highschool Activity/Intra College Quiz Competition 2021_page-0001.jpg" alt="Image 9">
+                            </marquee>
                         </div>
                     </div>
                     <div class="sxc-text cover">
