--- a/Awards.html
+++ b/Awards.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="icon" href="allgraphics/Lenish_Favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="allgraphics/Lenish_Favicon.ico" type="image/x-icon">
+    <title>My Awards</title>
     <link rel="stylesheet" href="research.css">
 </head>
 <body>
