--- a/experience.html
+++ b/experience.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+     <link rel="icon" href="allgraphics/Lenish_Favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="allgraphics/Lenish_Favicon.ico" type="image/x-icon">
+    <title>Experiences</title>
     <link rel="stylesheet" href="aboutme.css">
     <link rel="stylesheet" href="research.css">
 
