--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lenish Webpage</title>
+
+     <link rel="icon" href="allgraphics/Lenish_Favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="allgraphics/Lenish_Favicon.ico" type="image/x-icon">
+    <title>Lenish Pandey</title>
     <link rel="stylesheet" href="myweb.css">
    
 </head>
