Mukesh Dai Name and Sub Heading

--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<<<<<<< HEAD
+
 
      <link rel="icon" href="allgraphics/Lenish_Favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="allgraphics/Lenish_Favicon.ico" type="image/x-icon">
-=======
->>>>>>> 759efca51559daa65d33a27568d1b2bd15bc4bf5
+
     <title>Lenish Pandey</title>
     <link rel="stylesheet" href="myweb.css">
    
@@ -268,7 +267,7 @@
 
 
     <div id="research">
-        <div id="research-left ">
+        <div id="research-left">
             <div id="r-left-top">
                 <div class="myweb-allheading cover">Research</div>
             </div>
@@ -280,18 +279,18 @@
             <div class="research-right-item hiddenleft">
                 <div class="research-title">Solve Kathmandu Hopspital’s Scheduling Problem using Grovers algorithm</div>
                 <div class="research-description">In this paper, we aimed to address the Hospital Scheduling problem in Kathmandu by framing it as a graph coloring problem. We utilized Grover's algorithm on an IBM quantum computer simulator to explore potential solutions.</div>
-                <button class="readmore"><a href="" style="color: #FFDE59;">  - Read More </a></button>
+                <button class="readmore"><a href="https://drive.google.com/file/d/1dBTwBAyzOHFyskLSD1Y-_Hs7XdEms-B1/view?usp=sharing" style="color: #FFDE59;">  - Read More </a></button>
             </div>
             <div class="research-right-item hiddenleft">
                 <div class="research-title">Bekenstein-Hawking Entropy: parameters the entropy of black hole depends on </div>
                 <div class="research-description">
                     This paper explores how black holes challenge quantum mechanics and thermodynamics, emphasizing the need for a theory to explain black hole entropy. We delve into the factors influencing black hole entropy and derive the corresponding equation.</div>
-                    <button class="readmore"><a href="" style="color: #FFDE59;">  - Read More </a></button>
+                    <button class="readmore"><a href="https://drive.google.com/file/d/1vc4E7ZlRNpHj96TbLwE0J_WtR1ImwioN/view?usp=share_link" style="color: #FFDE59;">  - Read More </a></button>
             </div>
             <div class="research-right-item hiddenleft">
-                <div class="research-title">Title 3</div>
-                <div class="research-description">Description 3</div>
-                <button class="readmore"><a href="" style="color: #FFDE59;">  - Read More </a></button>
+                <div class="research-title">Using Liquid Neural Network in Quantum Computing</div>
+                <div class="research-description">It is research idea which I am searching about and wishto work on.</div>
+                <button class="readmore"><a href="" style="color: grey;">  - Read More </a></button>
             </div>
         </div>
     </div>
@@ -312,8 +311,8 @@
             <div class="review-container">
                 <div class="review-box hiddenleft">
                     <img src="allgraphics/mukeshdai.jfif" alt="User 1">
-                    <h1>Mukesh Ghimire<br>
-                        <h3 style="color: grey;">Nuclear Physicist</h3>
+                    <h1>Dr. Mukesh Ghimire<br>
+                        <h3 style="color: grey;">Experimental Particle Physicist</h3>
                     <p>"Lenish is a standout in our research team, bringing unparalleled enthusiasm and clarity to Quantum computing. Their dedication is palpable, making them an indispensable and valued member."</p>
                 </div>
                 <div class="review-box hiddenleft">
