Project in Index.html edits

--- a/index.html
+++ b/index.html
@@ -223,7 +223,8 @@
     <section class="projects">
         <div class="project-container hiddenleft cornor1">
             <div class="top">Projects </div>
-            <div class="bottom" id="more_projects" onclick="redirectToProject()">See More</div>
+            <div class="bottom" id="more_projects" onclick="redirectToProject()">See More  <img src="allgraphics/seemoreicon.png" style="width: 20vh; height: 20vh; margin: 3vh; pointer-events: none;"></div>
+
         </div>
 
         <div class="project-container hiddenleft center1">
