Project Page Edits and Dai haru ko reviews

--- a/aboutme.html
+++ b/aboutme.html
@@ -113,7 +113,7 @@
             </div>
             <div class="bgebs">
                 <div class="bgebs-heading">
-                    <div class="bgebs-head-left hiddenleft">Butwal  Glory Enlgish Boarding School, Butwal <br> <p style="font-size: 1rem;">Grade 1 - Grade 10  <br> 3.80/4 (Rank2) </p>
+                    <div class="bgebs-head-left hiddenleft">Butwal  Glory Enlgish Boarding School, Butwal <br> <p style="font-size: 1rem;">Grade 1 - Grade 10  <br>GPA 3.80/4 </p>
                     </div>
                     <div class="bgebs-head-right hiddenright">
                         <div class="bgebs-head-img"> <img src="allgraphics/bgebs.jpg"></div>
@@ -144,7 +144,7 @@
 
             <div class="sxc">
                 <div class="sxc-heading">
-                    <div class="sxc-head-left hiddenleft">Saint Xavier's College, Kathmandu<br> <p style="font-size: 1rem;">Grade 11 - Grade 12  <br> 3.57/4  </p>
+                    <div class="sxc-head-left hiddenleft">Saint Xavier's College, Kathmandu<br> <p style="font-size: 1rem;">Grade 11 - Grade 12  <br> GPA 3.57/4  </p>
                     </div>
                     <div class="sxc-head-right hiddenright">
                         <div class="sxc-head-img"> <img src="allgraphics/sxc.jpg"></div>
