--- a/projects.html
+++ b/projects.html
@@ -171,13 +171,13 @@
             </div>
 
 
-            <div class="project-item ">
+            <div class="project-item">
                 <div class="heads" data-text="Data Nexus : Open data for social good"> <!-- Add data-text attribute -->
                     <span class="typing-text"></span> <!-- Add a span for typing effect -->
                 </div>
                 <div class="secondpart">
                     <div class="otherinfo">
-                        <img src="" alt="Quantum Project 1 Image">
+                        <img src="allgraphics/datanexus.jpg" alt="Nexus Project  Image">
                         <button>  <p><a href="https://data-nexus.netlify.app/">Project Link</a></p> </button>
                     </div>
                     <div class="description">
