--- a/index.html
+++ b/index.html
@@ -313,25 +313,22 @@
                 <div class="review-box hiddenleft">
                     <img src="allgraphics/mukeshdai.jfif" alt="User 1">
                     <h1>Dr. Mukesh Ghimire<br>
+                    <p>"As Lenish's mentor at Incubate Nepal, I witnessed his invaluable contributions to our Quantum Computing project. Lenish led the theoretical and computational team. Lenish also conducted a highly informative workshop on quantum computing for our team. Lenish stands out for his honesty and integrity."</p>
                         <h3 style="color: grey;">Experimental Particle Physicist</h3>
-                    <p>"Lenish is a standout in our research team, bringing unparalleled enthusiasm and clarity to Quantum computing. Their dedication is palpable, making them an indispensable and valued member."</p>
                 </div>
                 <div class="review-box hiddenleft">
                     <img src="allgraphics/sabindai.jfif" alt="User 2">
                     <h1>Sabin Thapa<br>
                         <h3 style="color: grey;">President-Founder , QNepal</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit asperiores, magni, ipsum
-                        reiciendis autem aut nihil alias quos cupiditate blanditiis deleniti dolorem aliquam magnam quia
-                        deserunt amet dicta officiis nulla!</p>
+                    <p>"Lenish has contributed to developing the Quantum Computing learning environment in Nepal. Lenish's role in QNepal was working as a steering community in conducting workshops and contributing to mentoring in the lecture. He also worked in the outreach team and media team to reach a larger audience. "</p>
                 </div>
                 <div class="review-box hiddenleft">
                     <img src="allgraphics/gauravdai.jfif">
                     <h1>Gaurav Pandya<br>
                         <h3 style="color: grey;">ML Engineer, FuseMachineAI</h3>
                     </h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit neque molestiae tenetur quo dicta
-                        dolorum expedita praesentium accusamus? Odio natus sunt blanditiis molestias dolorem. Temporibus
-                        quisquam magni dolores libero iusto!</p>
+                    <p>"In FuseMachine Fellowship, I was his TA and he was in the  participating and presenting in the course. With 1 year of fellowship in AI, I can confirm that he is knowledgeable in the field of AL especially in the field of Computer Vision. I hope him all the best"
+</p>
                 </div>
             </div>
         </div>
