Flag Counter annd Some Minor Edits

--- a/aboutme.html
+++ b/aboutme.html
@@ -2,11 +2,19 @@
 <html lang="en">
 
 <head>
+    <script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-5KP4Y8WY2Q');
+</script>
+
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="allgraphics/Lenish_Favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="allgraphics/Lenish_Favicon.ico" type="image/x-icon">
-    <title>More About Me</title>
+    <title>About Me</title>
     <link rel="stylesheet" href="aboutme.css">
     <link rel="stylesheet" href="myweb.css">
     <link rel="stylesheet" href="research.css">
@@ -50,7 +58,7 @@
 
 
     <div class="overlay" id="menuOverlay">
-        <button class="close-overlay" onclick="closeOverlay() , exiting"> Exit</button>
+        <button class="close-overlay" onclick="closeOverlay() , exiting"> <img src="allgraphics/cross.png" alt="" style="width: 8vh; height: 8vh;"> </button>
         <div class="menu-wrapper" id="cotaineroverlay">
             <div class="left-content">
                 <div class="menu-content">
@@ -58,6 +66,7 @@
                         <li><a href="index.html">Home</a></li>
                         <li><a onclick="closeOverlay()" style="color: red;">About Me</a></li>
                         <li><a href="projects.html">Research and Projects</a></li>
+                        <li><a href="Awards.html">Awards and Honors</a></li>
                        
 
                     </ul>
@@ -113,7 +122,7 @@
             </div>
             <div class="bgebs">
                 <div class="bgebs-heading">
-                    <div class="bgebs-head-left hiddenleft">Butwal  Glory Enlgish Boarding School, Butwal <br> <p style="font-size: 1rem;">Grade 1 - Grade 10  <br>GPA 3.80/4 </p>
+                    <div class="bgebs-head-left hiddenleft">Butwal Glory English Boarding School, Butwal <br> <p style="font-size: 1rem;">Grade 1 - Grade 10  <br>GPA 3.80/4 </p>
                     </div>
                     <div class="bgebs-head-right hiddenright">
                         <div class="bgebs-head-img"> <img src="allgraphics/bgebs.jpg"></div>
@@ -123,8 +132,8 @@
                 <div class="bgebs-body">
                     <div class="bgebs-img hiddenleft" >
                         <div class="slider">
-                            <img src="allgraphics/incu.png" alt="Image 1">
-                            <img src="allgraphics/qnepal.png" alt="Image 2">
+                            <img src="allgraphics/Highschool Activity/radiomalmala.jpg" alt="Image 1">
+                            <img src="allgraphics/Highschool Activity/wholefirst.jpg" alt="Image 2">
                             <img src="allgraphics/fuse.png" alt="Image 3">
                             <img src="allgraphics/incu.png" alt="Image 4">
                         </div>
@@ -144,7 +153,7 @@
 
             <div class="sxc">
                 <div class="sxc-heading">
-                    <div class="sxc-head-left hiddenleft">Saint Xavier's College, Kathmandu<br> <p style="font-size: 1rem;">Grade 11 - Grade 12  <br> GPA 3.57/4  </p>
+                    <div class="sxc-head-left hiddenleft">St. Xavier's College, Kathmandu<br> <p style="font-size: 1rem;">Grade 11 - Grade 12  <br> GPA 3.57/4  </p>
                     </div>
                     <div class="sxc-head-right hiddenright">
                         <div class="sxc-head-img"> <img src="allgraphics/sxc.jpg"></div>
