--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html lang="en">
 
 <head>
+
+    <script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-5KP4Y8WY2Q');
+</script>
+
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -229,11 +239,11 @@
 
         <div class="project-container hiddenleft center1">
               <div class="top" id="CO2" onclick="redirectToProject()">
-                <div class="bottom-text">ML Model : Vehicle's CO2 Emission Prediction</div>
+                <div class="bottom-text">Vehicle's CO2 Emission Prediction Model</div>
             </div> 
 
             <div class="bottom" id="baghchal" onclick="redirectToProject()">
-                <div class="bottom-text">Baghchal : A Traditional Game</div>
+                <div class="bottom-text">Implementing DQN in Bagchal </div>
             </div>
         </div>
 
@@ -245,7 +255,7 @@
 
            
             <div class="bottom" id="vocab" onclick="redirectToProject()">
-                <div class="bottom-text">Advanced Vocab Project</div>
+                <div class="bottom-text">Vocab Assistance</div>
             </div>
            
         </div>
@@ -313,13 +323,13 @@
                 <div class="review-box hiddenleft">
                     <img src="allgraphics/mukeshdai.jfif" alt="User 1">
                     <h1>Dr. Mukesh Ghimire<br>
-                    <p>"As Lenish's mentor at Incubate Nepal, I witnessed his invaluable contributions to our Quantum Computing project. Lenish led the theoretical and computational team. Lenish also conducted a highly informative workshop on quantum computing for our team. Lenish stands out for his honesty and integrity."</p>
                         <h3 style="color: grey;">Experimental Particle Physicist</h3>
+                    <p>"As Lenish's mentor at Incubate Nepal, I witnessed his invaluable contributions to our Quantum Computing project. Lenish led the theoretical and computational team. Lenish also conducted a highly informative workshop on quantum computing for our team. Lenish stands out for his honesty and integrity."</p>
                 </div>
                 <div class="review-box hiddenleft">
                     <img src="allgraphics/sabindai.jfif" alt="User 2">
                     <h1>Sabin Thapa<br>
-                        <h3 style="color: grey;">President-Founder , QNepal</h3>
+                        <h3 style="color: grey;">President-Founder, QNepal</h3>
                     <p>"Lenish has contributed to developing the Quantum Computing learning environment in Nepal. Lenish's role in QNepal was working as a steering community in conducting workshops and contributing to mentoring in the lecture. He also worked in the outreach team and media team to reach a larger audience. "</p>
                 </div>
                 <div class="review-box hiddenleft">
