--- a/projects.html
+++ b/projects.html
@@ -2,6 +2,14 @@
 <html lang="en">
 
 <head>
+     <script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-5KP4Y8WY2Q');
+</script>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="allgraphics/Lenish_Favicon.ico" type="image/x-icon">
@@ -71,6 +79,7 @@
                         <li><a href="index.html">Home</a></li>
                         <li><a href="aboutme.html">About Me</a></li>
                         <li><a onclick="closeOverlay()" style="color: red;">Research and Projects</a></li>
+                        <li><a href="Awards.html"> Awards and Honors</a>
                        
 
                     </ul>
