--- a/Awards.html
+++ b/Awards.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-5KP4Y8WY2Q');
+</script>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="allgraphics/Lenish_Favicon.ico" type="image/x-icon">
@@ -54,7 +62,7 @@
 </nav>
 
 <div class="overlay" id="menuOverlay">
-    <button class="close-overlay" onclick="closeOverlay() , exiting"> Exit</button>
+    <button class="close-overlay" onclick="closeOverlay() , exiting"> <img src="allgraphics/cross.png" alt="" style="width: 8vh; height: 8vh;"></button>
     <div class="menu-wrapper" id="cotaineroverlay">
         <div class="left-content">
             <div class="menu-content">
@@ -62,6 +70,7 @@
                     <li><a onclick="closeOverlay()">Home</a></li>
                     <li><a href="aboutme.html">About Me</a></li>
                     <li><a href="projects.html" >Projects</a></li>
+                    <li><a href="Awards.html">Awards and Honors</a></li>
                    
 
                 </ul>
