--- a/experience.html
+++ b/experience.html
@@ -2,6 +2,14 @@
 <html lang="en">
 
 <head>
+     <script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-5KP4Y8WY2Q');
+</script>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <link rel="icon" href="allgraphics/Lenish_Favicon.ico" type="image/x-icon">
@@ -9,13 +17,16 @@
     <title>Experiences</title>
     <link rel="stylesheet" href="aboutme.css">
     <link rel="stylesheet" href="research.css">
-
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-5KP4Y8WY2Q"></script>
+   
 
 </head>
 
-<body>
+
 
     <body>
+
+
 
 
         <div id="loader">
@@ -52,7 +63,7 @@
         </nav>
 
         <div class="overlay" id="menuOverlay">
-            <button class="close-overlay" onclick="closeOverlay() , exiting"> Exit</button>
+            <button class="close-overlay" onclick="closeOverlay() , exiting"> <img src="allgraphics/cross.png" alt="" style="width: 8vh; height: 8vh;"></button>
             <div class="menu-wrapper" id="cotaineroverlay">
                 <div class="left-content">
                     <div class="menu-content">
@@ -60,6 +71,7 @@
                             <li><a href="index.html">Home</a></li>
                             <li><a href="aboutme.html">About Me</a></li>
                             <li><a href="projects.html">Research and Projects</a></li>
+                            <li> <a href="Awards.html">Awards and Honors</a> </li>
            
 
                         </ul>
@@ -313,7 +325,7 @@
 
         <script src="onscroll.js"></script>
     </body>
-</body>
+
 
 
 </html>
