HighSchool Images , Flashcard speed and Project Buttons

--- a/slider.html
+++ b/slider.html
@@ -60,7 +60,7 @@
   
   var mySwiper = new Swiper('.swiper-container', {
     loop: false ,
-    speed: 2000,
+    speed: 1500,
     autoplay: {
         delay:5000,
     },
@@ -73,7 +73,7 @@
         stretch: 80,
         depth: 1000,
         modifier: 1,
-        slideShadows: false,
+        slideShadows: true,
     },
 
     // Navigation arrows
