--- a/aboutme.html
+++ b/aboutme.html
@@ -133,14 +133,14 @@
                     <div class="bgebs-img hiddenleft" >
                         <div class="slider">
                             <img src="allgraphics/Highschool Activity/radiomalmala.jpg" alt="Image 1">
-                            <img src="allgraphics/Highschool Activity/wholefirst.jpg" alt="Image 2">
-                            <img src="allgraphics/fuse.png" alt="Image 3">
-                            <img src="allgraphics/incu.png" alt="Image 4">
+                            <img src="allgraphics/Highschool Activity/redcross.jpg" alt="Image 2">
+                            <img src="allgraphics/Highschool Activity/vicepresident.jpg" alt="Image 3">
+                            <img src="allgraphics/Highschool Activity/wholefirst.jpg" alt="Image 4">
                         </div>
                     </div>
                     <div class="bgebs-text cover">
-                        <div class="text-line1">◽ Student Representative from School in Radio Malmala -2017 </div>
-                        <div class="text-line1">◽ President - Juniour Red Cross Circle - 2018</div>
+                        <div class="text-line1">◽ Student Representative from School in Radio Malmala - 2017/18 </div>
+                        <div class="text-line1">◽ President - Red Cross Circle - 2017/18</div>
                         <div class="text-line1">◽ Vice President - Bal Club, Belbas, Butwal</div>
                         <div class="text-line1">◽ Whole First Honour - School Level - 2017</div>
                         <div class="text-line1">◽ Sport House Captain - 2017/2018</div>
@@ -162,7 +162,7 @@
                 <div class="sxc-body">
                     <div class="sxc-img hiddenleft">
                         <div class="slider">
-                            <marquee style = "scrollamount: 400"> 
+                            <marquee> 
                             <img src="allgraphics/Highschool Activity/Physics Club Human Resource Manager (1)_page-0001.jpg" alt="Image 1">
                             <img src="allgraphics/Highschool Activity/Mattrab Community Creator_page-0001.jpg" alt="Image 2">
                             <img src="allgraphics/Highschool Activity/7th Sxc cycle Rally-2020, Ride Against Cancer fundraiser_page-0001.jpg" alt="Image 3">
