--- a/aboutme.html
+++ b/aboutme.html
@@ -2,10 +2,13 @@
 <html lang="en">
 
 <head>
-    <script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-5KP4Y8WY2Q"></script>
+<script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
+
   gtag('config', 'G-5KP4Y8WY2Q');
 </script>
 
