--- a/experience.html
+++ b/experience.html
@@ -2,7 +2,9 @@
 <html lang="en">
 
 <head>
-     <script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-5KP4Y8WY2Q"></script>
+<script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
