Project page edited

--- a/projects.html
+++ b/projects.html
@@ -133,7 +133,7 @@
                    
                     </div>
                     <div class="description">
-                        <h1>Abstract :</h1>  <br>In this paper we discuss the structure and implementations of the planar graph-coloring problem (PGCP). We
+                        <h1>Abstract</h1>  <br>In this paper we discuss the structure and implementations of the planar graph-coloring problem (PGCP). We
                         briefly look at well-known classical algorithms used to solve the PGCP, but primarily focus on the quantum computational
                         angle. Grover’s search is a well-known quantum algorithm that offers a quadratic advantage relative to its classical
                         counterparts. We inspect its application to the PGCP and build a corresponding quantum circuit.
@@ -157,7 +157,7 @@
                               <button>  <p><a href="https://drive.google.com/file/d/1vc4E7ZlRNpHj96TbLwE0J_WtR1ImwioN/view?usp=share_link">Project Link</a></p> </button>
                         </div>
                         <div class="description">
-                            Abstract: Black holes seem like they have no entropy but they possess the maximum entropy of the universe. In this paper,
+                            <h1>Abstract</h1> <br> Black holes seem like they have no entropy but they possess the maximum entropy of the universe. In this paper,
                             we will be discussing how blackholes contradict the fundamentals of quantum mechanics as well as thermodynamics and the
                             necessity of the theory to describe the entropy of blackholes. In this paper we will further discuss what parameters the entropy
                             of black hole depends on and precisely derive the equation that calculates the entropy of the blackhole
@@ -176,7 +176,8 @@
                         <button>  <p><a href="https://github.com/lenishu/Solve_baghchal">Project Link</a></p> </button>
                     </div>
                     <div class="description">
-                        Created custom gym environment for the baghchal environment and train agent using Stablebaseline DQN algorithm
+
+                        <h1>Project Description</h1> <br>Our project involved the creation of a custom gym environment tailored for Baghchal, an ancient and traditional Nepali board game. Baghchal, rooted in Nepali culture, is a strategic two-player game that dates back centuries, offering a rich gaming experience. Our focus was on developing an environment conducive to training agents using the Stablebaseline DQN algorithm.
                     </div>
                 </div>
             </div>
@@ -192,7 +193,7 @@
                         <button>  <p><a href="https://data-nexus.netlify.app/">Project Link</a></p> </button>
                     </div>
                     <div class="description">
-                        Data Nexus simplifies data access across diverse categories, including space, climate, and more. It streamlines data retrieval
+                        <h1>Project Description</h1> <br> Data Nexus simplifies data access across diverse categories, including space, climate, and more. It streamlines data retrieval
                         with 1500 categorized datasets and offers accurate future climate predictions based on historical CO2 emissions.
 
                     </div>
