Images in Project.html

--- a/projects.html
+++ b/projects.html
@@ -127,7 +127,7 @@
                     <span class="typing-text"></span> <!-- Add a span for typing effect -->
                 </div>
                 <div class="secondpart">
-                    <div class="otherinfo" style="align-items: center;">
+                    <div class="otherinfo">
                          <img src="allgraphics/grovers-iteration.png" alt="Vocab Image">
                         <button>  <p><a href="https://drive.google.com/file/d/1dBTwBAyzOHFyskLSD1Y-_Hs7XdEms-B1/view?usp=sharing">Project Link</a></p> </button>
                    
@@ -148,7 +148,7 @@
 
             <div class="project-item ">
                 
-                    <div class="heads" data-text="Bekenstein-Hawking Entropy June 2021"> <!-- Add data-text attribute -->
+                    <div class="heads" data-text="Bekenstein-Hawking Entropy"> <!-- Add data-text attribute -->
                         <span class="typing-text"></span> <!-- Add a span for typing effect -->
                     </div>
                     <div class="secondpart">
@@ -202,6 +202,24 @@
 
             <div class="project-item ">
                 <div class="heads" data-text="Vehicle’s carbon Emissions Prediction "> <!-- Add data-text attribute -->
+                    <span class="typing-text"></span> <!-- Add a span for typing effect -->
+                </div>
+                <div class="secondpart">
+                    <div class="otherinfo">
+                        <img src="quantum2.jpg" alt="Quantum Project 2 Image">
+                        <button>  <p><a href="https://github.com/lenishu/Vehicle_Carbon_Emission">Project Link</a></p> </button>
+                    </div>
+                    <div class="description">
+                        Worked on predicting carbon emissions of a vehicle using vehicle feature through ML algorithm (Linear Regression, KNN and
+                        Decision Tree Regressor)
+                    </div>
+                </div>
+            </div>
+
+
+
+            <div class="project-item ">
+                <div class="heads" data-text="Vocab Assistance"> <!-- Add data-text attribute -->
                     <span class="typing-text"></span> <!-- Add a span for typing effect -->
                 </div>
                 <div class="secondpart">
