--- a/Awards.html
+++ b/Awards.html
@@ -69,10 +69,10 @@
         <div class="left-content">
             <div class="menu-content">
                 <ul class="vertical-list">
-                    <li><a onclick="closeOverlay()">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="aboutme.html">About Me</a></li>
                     <li><a href="projects.html" >Projects</a></li>
-                    <li><a href="Awards.html">Awards and Honors</a></li>
+                    <li><a onclick="closeOverlay()" style="text-decoration : none ; color : red;">Awards and Honors</a></li>
                    
 
                 </ul>
@@ -181,6 +181,11 @@
         color: white;
     }
 
+
+    .menu-icon:hover span {
+        color: cyan;
+        background-color: darkcyan;
+    }
 
     
 
