--- a/projects.html
+++ b/projects.html
@@ -148,7 +148,7 @@
 
             <div class="project-item ">
                 
-                    <div class="heads" data-text="Bekenstein-Hawking Entropy June 2021"> <!-- Add data-text attribute -->
+                    <div class="heads" data-text="Bekenstein-Hawking Entropy"> <!-- Add data-text attribute -->
                         <span class="typing-text"></span> <!-- Add a span for typing effect -->
                     </div>
                     <div class="secondpart">
@@ -193,8 +193,7 @@
                         <button>  <p><a href="https://data-nexus.netlify.app/">Project Link</a></p> </button>
                     </div>
                     <div class="description">
-                        <h1>Project Description</h1> <br> Data Nexus simplifies data access across diverse categories, including space, climate, and more. It streamlines data retrieval
-                        with 1500 categorized datasets and offers accurate future climate predictions based on historical CO2 emissions.
+                        <h1>Project Description</h1> <br>Data Nexus, a free easy to use platform, is designed taking into consideration the arduous process of  accessing data about space. Data Nexus simplifies data access across diverse categories, including space, climate, and more. It streamlines data retrieval with 1500 categorized datasets and offers accurate future climate predictions based on historical CO2 emissions.
 
                     </div>
                 </div>
@@ -211,8 +210,7 @@
                         <button>  <p><a href="https://github.com/lenishu/Vehicle_Carbon_Emission">Project Link</a></p> </button>
                     </div>
                     <div class="description">
-                        Worked on predicting carbon emissions of a vehicle using vehicle feature through ML algorithm (Linear Regression, KNN and
-                        Decision Tree Regressor)
+                        <h1>Project Description</h1> <br> Our project focused on predicting vehicle carbon emissions through machine learning algorithms. We investigated the correlation between vehicle features and emissions, employing methods like Linear Regression, KNN, and Decision Tree Regressor. Our objective was to understand how distinct vehicle attributes influence emissions.
                     </div>
                 </div>
             </div>
