--- a/projects.html
+++ b/projects.html
@@ -227,8 +227,7 @@
                         <button>  <p><a href="https://github.com/lenishu/Vehicle_Carbon_Emission">Project Link</a></p> </button>
                     </div>
                     <div class="description">
-                        Worked on predicting carbon emissions of a vehicle using vehicle feature through ML algorithm (Linear Regression, KNN and
-                        Decision Tree Regressor)
+                        <h1>Project Description</h1> <br> Vocab Assistant is a language tool designed to support vocabulary improvement. It suggests words, stores your selections, and generates references and examples based on your collected words, helping to enhance your language skills efficiently.
                     </div>
                 </div>
             </div>
